<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">小黄蜂管家</string>
    <string name="wifi_list">选择网络</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sensitiveTip">用户使用须知</string>
    <string name="sensitiveTip1">(1)我们需要获取您手机的设备信息及个人信息以实现账号体系相关的功能。</string>
    <string name="sensitiveTip2">(2)我们仅与我们的一个合作伙伴SDK进行了数据分享并严格对您的数据进行保密。</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="need_open_setting">您禁止了该权限,需要您点击确认跳转权限授权页面进行授权</string>
    <string name="need_open_gps">你未打开GPS功能,请打开</string>
    <string name="need_open_wifi">你未打开WIFI功能,请打开</string>
    <string name="need_open_gps_vivo">亲爱的vivo用户,我们需要您前往设置页面暂时打开定位服务以获取附近网络。</string>
    <string name="long_wifi_no">连接热点过久,请检查通知栏是否存在"此网络无法访问互联网"并点击授权允许连接，或退出重试。</string>
    <string name="long_wifi_err">连接热点失败,请重试。</string>
    <string name="error_empty_data">数据为空</string>
    <string name="error_empty_clientid">clientId为空</string>
    <string name="error_empty_request">空请求</string>
    <string name="error_request_cancel">请求取消</string>
    <string name="error_net_connect">网络连接错误</string>
    <string name="error_net_unknown">网络未知错误</string>
    <string name="error_ap_connect">配网遇到问题,请重试</string>
    <string name="error_ap_connect1">配网遇到问题,请返回重试</string>
    <string name="error_ap_auth">此步骤请保证上网功能</string>
    <string name="error_request">请求数据错误</string>
    <string name="error_inner_skill">未发现技能</string>



    <string name="try_again">请重试</string>
    <string name="try_again1">请开通音乐权限或重试</string>
    <string name="offline">设备处于离线状态</string>

    <string name="bind1tip">有屏音箱扫码授权</string>

    <string name="tab_dialog">对话</string>
    <string name="tab_dan">党建</string>
    <string name="tab_find">发现</string>
    <string name="tab_skill">技能</string>
    <string name="tab_home">家居</string>
    <string name="tab_mall">商城</string>
    <string name="tab_mime">我的</string>
    <string name="title_login">小黄蜂登录</string>
    <string name="add_device">添加主控设备</string>
    <string name="add_device1">请添加设备</string>
    <string name="scan_device">有屏扫码授权</string>
    <string name="ap_device">党建AP配网</string>
    <string name="ap_device_ok">AP配网授权成功,请稍等%d秒</string>
    <string name="ap_device_exit">正在努力检测授权,是否退出?</string>

    <string name="ap_device_no_net">正在努力切回可用的网络,请稍后!</string>
    <string name="qAndA">遇到问题?</string>
    <string name="fresh_device">刷新设备</string>
    <string name="fresh_device1">点击空白区域刷新</string>
    <string name="words1">小黄蜂智能音箱</string>
    <string name="words2">带你进入全新世界</string>
    <string name="camera_per">扫码需要您的授权</string>
    <string name="camera_per1">扫码需要您的授权相机权限,请去设置页打开相机权限!</string>
    <string name="write_per">更新应用需要您的授权</string>
    <string name="install_unknown_per">安装应用需要您的授权</string>
    <string name="ap_per">配网需要您的授权</string>
    <string name="per">该功能需要您去应用权限界面申请应用权限</string>
    <string name="exit_again">再按一次退出</string>
    <string name="tip_device">设备信息</string>
    <string name="tip_zone">设备位置</string>
    <string name="tip_music">音乐畅听</string>
    <string name="tip_music_enabled">已开通</string>
    <string name="tip_music_disEnabled">未开通</string>
    <string name="tip_music_deadline">%s到期</string>
    <string name="keep_wake_up_tip">持续交互</string>
    <string name="keep_wake_up">在一次唤醒后,可以保持一段时间内无需唤醒便可以直接与设备交互,交互跟自然</string>
    <string name="unBind">解除绑定</string>
    <string name="submit">一键反馈</string>
    <string name="searchHint">请输入搜索关键字</string>
    <string name="unBindTip">是否解除绑定?</string>
    <string name="nextStep">下一步</string>
    <string name="tip">提示</string>
    <string name="updateTip">发现新版本</string>
    <string name="yesOk">知道了</string>
    <string name="exit">退出登录</string>
    <string name="wx_pay_err">微信下单失败,请重试!</string>
    <string name="ali_pay_err">支付宝下单失败,请重试!</string>
    <string name="cancel_pay_err">您取消了支付宝支付</string>
    <string name="cancel_pay_err1">您取消了微信支付</string>
    <string name="yes_pay">支付成功</string>
    <string name="tip_update_check_ok_least">当前为最新版本!</string>
    <string name="tip_update_check_ok_new">发现新版本:%s</string>
    <string name="tip_update_check_err">检查更新失败,请重试</string>
    <string name="page_tip"></string>
    <string name="play">播放</string>
    <string name="playing">正在播放%s</string>
    <string name="more">更多</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="update">更新</string>
    <string name="giveUp">放弃</string>
    <string name="updating">更新中</string>
    <string name="update_name">更新通知</string>
    <string name="update_err">更新失败,错误码:%d,请重试!</string>
    <string name="update_tip">更新中,请稍后!</string>
    <string name="un_open">调试中,敬请期待</string>
    <string name="test_crash">内测中,容易出现问题,很抱歉，软件需要重启。</string>
    <string name="play_all">播放全部</string>
    <string name="no_more">------已经到底了------</string>
    <string name="err_">请退出重试</string>
    <string name="plz_add">请先添加设备</string>
    <string name="plz_wait">请稍后</string>
    <string name="login_err">登录失败,请重试</string>
    <string name="request_install">下载完毕,是否更新?</string>
    <string name="bind_devices_err">绑定设备失败</string>
    <string name="get_devices_err">获取绑定设备失败</string>
    <string name="empty_devices">暂无设备</string>
    <string name="exit_confirm">是否退出登录?</string>
    <string name="ic_routines">快捷指令</string>
    <string name="ic_alarm">我的闹钟</string>
    <string name="ic_about">关于我们</string>
    <string name="ic_skill_detail">技能详情</string>
    <string name="ic_about_content">小黄蜂在线</string>
    <string name="ic_content">内容账号</string>
    <string name="music_disEnabled">请开通音乐</string>
    <string name="music_enabled">已开通音乐</string>
    <string name="checkUpdate">检查更新</string>
    <string name="usrCode">用户码:</string>
    <string name="usrCenter">个人中心</string>
    <string name="usrCenterPhone">绑定号码</string>
    <string name="usrCenterId">用户码</string>
    <string name="usrCopy">复制</string>
    <string name="usrCopyTip">已经复制到剪贴板</string>
    <string name="usrPay">支付记录</string>
    <string name="usrReport">意见与建议</string>
    <string name="usrReportHint">请输出您的意见与建议</string>
    <string name="usrReportHint1">请输出您的邮箱地址</string>
    <string name="usrReportErr">请填写内容与邮箱地址</string>
    <string name="usrReportErr1">邮箱地址错误</string>
    <string name="usrReportErr2">提交错误,请重试</string>
    <string name="usrReportOk">提交成功</string>
    <string name="prev_bind_tittle">开始配网</string>
    <string name="prev_bind_tittle1">设备进入配网模式引导</string>
    <string name="prev_bind_subTittle"></string>
    <string name="prev_bind_subTittle1">接通电源，设备开机，长按静音键，进入配网模式</string>
    <string name="prev_bind_subTittle_a">配网成功</string>
    <string name="prev_bind_subTittle_a1">设备正在配网</string>
    <string name="ap_step_1">选择设备工作Wi-Fi</string>
    <string name="ap_step_1_1">暂不支持连接5G Wi-Fi</string>
    <string name="ap_step_4">设备联网</string>
    <string name="ap_step_4_1">设备联网中...请稍后</string>
    <string name="wifiTip">选取可见的网络</string>
    <string name="wifiName">Wi-Fi名称</string>
    <string name="wifiPassWd">Wi-Fi密码</string>
    <string name="wifiInfoErr">请正确输入Wi-Fi信息</string>
    <string name="ap_step_3">请选择</string>
    <string name="ap_step_3_1">热点</string>
    <string name="ap_step_3_2">刷新</string>
    <string name="ap_step_3_3">没有搜索到热点，请确认设备已进入联网模式</string>

    <string name="pay_type">选择支付类型</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechat">微信支付</string>
    <string name="alipay1">支付宝</string>
    <string name="wechat1">微信</string>
    <string name="pay_tip">是否确定购买%s,使用%s支付%s元？</string>


    <string name="ap_device_err">请选择正确的产品</string>
    <string name="ap_device_err1">请联系厂商添加设备白名单</string>
    <string name="ap_device_err2">授权超时,请保证网络正常或联系客服</string>

    <string name="screen_zoom_summary_custom">"自定义 (<xliff:g id="DENSITYDPI">%d</xliff:g>)"</string>
    <string name="screen_zoom_summary_default">"默认"</string>
    <string name="screen_zoom_summary_small">"小"</string>
    <string name="screen_zoom_summary_large">"大"</string>
    <string name="screen_zoom_summary_very_large">"较大"</string>
    <string name="screen_zoom_summary_extremely_large">"最大"</string>

</resources>