<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="onclickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/tabbarSize"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:background="@drawable/line_top">

        <!--对话框-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tab_dialog"
            android:tag="1"
            android:drawableTop="@drawable/tab_dialog_selector"
            android:text="@string/tab_dialog"
            android:onClick="@{onclickListener}"
            style="@style/TabBarTextStyle"/>

        <!--发现-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tab_find"
            android:tag="2"
            android:drawableTop="@drawable/tab_find_selector"
            android:text="@string/tab_find"
            android:onClick="@{onclickListener}"
            style="@style/TabBarTextStyle"/>

        <!--技能-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tab_skill"
            android:tag="3"
            android:drawableTop="@drawable/tab_skill_selector"
            android:text="@string/tab_skill"
            android:onClick="@{onclickListener}"
            style="@style/TabBarTextStyle"/>

        <!--商城-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tab_mall"
            android:tag="4"
            android:drawableTop="@drawable/tab_smart_selector"
            android:text="@string/tab_home"
            android:onClick="@{onclickListener}"
            style="@style/TabBarTextStyle"/>

        <!--我的-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tab_mine"
            android:tag="5"
            android:drawableTop="@drawable/tab_mine_selector"
            android:text="@string/tab_mime"
            android:onClick="@{onclickListener}"
            style="@style/TabBarTextStyle"/>


    </LinearLayout>

</layout>
