<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onclickListener"
            type="android.view.View.OnClickListener" />
        <import type="android.view.View" alias="View"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/empty_devices"
                android:textColor="@color/smartwasp_blue"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/device_add"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/shape_mask_bg_radius10_blue"
                android:onClick="@{onclickListener}"
                android:text="@string/add_device"
                android:textColor="@color/smartwasp_white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/device_fresh"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/shape_mask_bg_radius10_blue"
                android:onClick="@{onclickListener}"
                android:text="@string/fresh_device"
                android:textColor="@color/smartwasp_white" />
        </LinearLayout>
    </FrameLayout>

</layout>