<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="step" type="String" />
        <variable name="total" type="String" />
        <variable
            name="onclickListener"
            type="android.view.View.OnClickListener" />
        <import type="android.view.View" alias="View"/>
    </data>

<!--    视图容器-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:clickable="true"
        android:background="@color/smartwasp_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        toobar-->
        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/toolbarSize"
            app:step="@{step}"
            app:total="@{total}"
            app:onclickListener="@{onclickListener}"
            layout="@layout/layout_toolbar_step"/>

<!--        标题-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTittle"
            android:text="@string/ap_step_3"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/line_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTittle">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/ap_step_3_1"
                android:textColor="@color/smartwasp_dark"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:indeterminateTint="@color/smartwasp_blue"
                android:indeterminateTintMode="src_atop"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/refreshBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:onClick="@{onclickListener}"
                android:background="@drawable/ripple_background_transparent"
                android:gravity="center"
                android:text="@string/ap_step_3_2"
                android:textColor="@color/smartwasp_blue"
                android:textSize="14sp" />
        </LinearLayout>


<!--        下一步-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stepBtn"
            android:onClick="@{onclickListener}"
            android:text="@string/nextStep"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/next_text_color"
            android:background="#FFF"
            android:layout_height="56dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        
<!--        wifi列表-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintBottom_toTopOf="@id/stepBtn"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/ap_step_3_3"
            android:textColor="#000"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
