<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="tittle" type="String" />
        <variable name="leftIcon" type="android.graphics.drawable.Drawable" />
        <variable
            name="onclickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/smartwasp_white"
        tools:context=".activity.PrevBindActivity">

<!--        toobar-->
        <include
            android:id="@+id/toolbar"
            app:tittle="@{tittle}"
            app:leftIcon="@{leftIcon}"
            app:onclickListener="@{onclickListener}"
            layout="@layout/layout_toolbar" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtReport"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:padding="10dp"
            android:gravity="left|top"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:maxEms="150"
            android:textSize="16sp"
            android:hint="@string/usrReportHint"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@color/white"
            android:hint="@string/usrReportHint1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxEms="150"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/txtReport" />

        <!--        解除绑定-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:onClick="@{onclickListener}"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textColor="@android:color/holo_orange_dark"
            android:background="#FFF"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/txtEmail"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
