<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="step" type="String" />
        <variable name="total" type="String" />
        <variable
            name="onclickListener"
            type="android.view.View.OnClickListener" />
        <import type="android.view.View" alias="View"/>
    </data>

<!--    视图容器-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:clickable="true"
        android:background="@color/smartwasp_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        toobar-->
        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/toolbarSize"
            app:step="@{step}"
            app:total="@{total}"
            app:onclickListener="@{onclickListener}"
            layout="@layout/layout_toolbar_step"/>

<!--        标题-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTittle"
            android:text="@string/ap_step_1"
            android:textSize="20dp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

<!--        提示-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTittle"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ap_step_1_1"
            android:gravity="center"
            android:textColor="@color/smartwasp_dark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTittle" />

<!--        wifi名称-->
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTittle"
            android:background="@drawable/line_bottom">

<!--        wifi名称-->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wifiName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textCursorDrawable="@drawable/abc_text_cursor_material"
                android:background="@null"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/wifiName"
                android:text="dev"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wifiIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:onClick="@{onclickListener}"
                android:layout_marginEnd="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_right_grey_16dp"
                android:background="@drawable/ripple_background_transparent"
                app:tint="#000"/>
        </LinearLayout>


<!--        wifi密码-->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout1"
            android:background="@drawable/line_bottom">

<!--        wifi密码-->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/wifiPasswd"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textCursorDrawable="@drawable/abc_text_cursor_material"
                android:background="@null"
                android:hint="@string/wifiPassWd"
                android:text="87654321"
                android:imeOptions="actionDone"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawableTint="#000" />

            <com.smartwasp.assistant.app.widget.SimpleButton
                android:id="@+id/passWdIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/design_password_eye"
                android:onClick="@{onclickListener}"
                android:scaleType="centerInside"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#000"/>

        </LinearLayout>

<!--        遇到问题-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/qAndA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qAndA"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:alpha="0"
            android:clickable="true"
            android:background="@drawable/ripple_background_transparent"
            android:textColor="@color/smartwasp_orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"/>

<!--        下一步-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/stepBtn"
            android:onClick="@{onclickListener}"
            android:text="@string/nextStep"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/next_text_color"
            android:background="#FFF"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qAndA"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
