<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="tittle" type="String" />
        <variable name="leftIcon" type="android.graphics.drawable.Drawable" />
        <variable name="phone" type="String" />
        <variable
            name="onclickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/smartwasp_white"
        tools:context=".activity.PrevBindActivity">

<!--        toobar-->
        <include
            android:id="@+id/toolbar"
            app:tittle="@{tittle}"
            app:leftIcon="@{leftIcon}"
            app:onclickListener="@{onclickListener}"
            layout="@layout/layout_toolbar" />

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <!--        手机号码-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:focusable="true"
                android:background="#FFF">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/usrCenterPhone"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="16sp"
                    android:textColor="@color/smartwasp_dark"
                    android:gravity="center_vertical|right"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FFF"
                    android:paddingStart="6dp"
                    android:text="@{phone}"
                    android:layout_marginEnd="10dp"
                    tools:text="0000000000000000000000000000000"/>
            </LinearLayout>


            <!--        用户码-->
            <LinearLayout
                android:id="@+id/usrCodeBtn"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:onClick="@{onclickListener}"
                android:background="@drawable/ripple_background">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/usrCenterId"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_arrow_right_grey_16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="16dp"
                    android:layout_height="16dp"/>
            </LinearLayout>

            <View
                android:layout_marginStart="10dp"
                style="@style/horizontal_line"/>

            <!--        支付记录-->
            <LinearLayout
                android:id="@+id/usrPayBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"
                android:onClick="@{onclickListener}"
                android:background="@drawable/ripple_background">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/usrPay"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_arrow_right_grey_16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="16dp"
                    android:layout_height="16dp"/>
            </LinearLayout>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exitBtn"
            android:onClick="@{onclickListener}"
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"
            android:background="#FFF"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/container1"/>


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
